# python-sdk

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  sphinx.yaml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/source/: edgeimpulse.api.doctree  edgeimpulse.data.doctree  edgeimpulse.data.sample_type.doctree  edgeimpulse.datasets.doctree  edgeimpulse.doctree  edgeimpulse.exceptions.doctree  edgeimpulse.experimental.data.doctree  edgeimpulse.experimental.doctree  edgeimpulse.experimental.tuner.doctree  edgeimpulse.methods.deploy.doctree  edgeimpulse.methods.doctree  edgeimpulse.methods.profile.doctree  edgeimpulse.model.doctree  edgeimpulse.model.input_type.doctree  edgeimpulse.model.model_info.doctree  edgeimpulse.model.output_type.doctree  edgeimpulse.tuner.doctree  edgeimpulse.util.doctree
docs/_modules/: index.html
docs/_modules/edgeimpulse/: api.html  datasets.html  exceptions.html  util.html
docs/_modules/edgeimpulse/data/: sample_type.html
docs/_modules/edgeimpulse/methods/: deploy.html  profile.html
docs/_modules/edgeimpulse/model/: input_type.html  model_info.html  output_type.html
docs/_sources/: index.rst.txt
docs/_sources/source/: edgeimpulse.api.rst.txt  edgeimpulse.data.rst.txt  edgeimpulse.data.sample_type.rst.txt  edgeimpulse.datasets.rst.txt  edgeimpulse.exceptions.rst.txt  edgeimpulse.experimental.data.rst.txt  edgeimpulse.experimental.rst.txt  edgeimpulse.experimental.tuner.rst.txt  edgeimpulse.methods.deploy.rst.txt  edgeimpulse.methods.profile.rst.txt  edgeimpulse.methods.rst.txt  edgeimpulse.model.input_type.rst.txt  edgeimpulse.model.model_info.rst.txt  edgeimpulse.model.output_type.rst.txt  edgeimpulse.model.rst.txt  edgeimpulse.rst.txt  edgeimpulse.tuner.rst.txt  edgeimpulse.util.rst.txt  modules.rst.txt
docs/_static/css/: custom.scss
docs/source/: edgeimpulse.api.html  edgeimpulse.data.html  edgeimpulse.data.sample_type.html  edgeimpulse.datasets.html  edgeimpulse.exceptions.html  edgeimpulse.experimental.data.html  edgeimpulse.experimental.html  edgeimpulse.experimental.tuner.html  edgeimpulse.html  edgeimpulse.methods.deploy.html  edgeimpulse.methods.html  edgeimpulse.methods.profile.html  edgeimpulse.model.html  edgeimpulse.model.input_type.html  edgeimpulse.model.model_info.html  edgeimpulse.model.output_type.html  edgeimpulse.tuner.html  edgeimpulse.util.html  modules.html
edgeimpulse/: __init__.py  api.py  datasets.py  exceptions.py  util.py
edgeimpulse/data/: __init__.py  sample_type.py
edgeimpulse/data/_functions/: delete.py  download.py  upload.py  upload_files.py  upload_numpy.py  upload_pandas.py  util.py
edgeimpulse/datasets/: __init__.py
edgeimpulse/datasets/_functions/: _datasets.py
edgeimpulse/experimental/: __init__.py  api.py
edgeimpulse/experimental/data/: __init__.py
edgeimpulse/experimental/impulse/: __init__.py
edgeimpulse/experimental/tuner/: __init__.py
edgeimpulse/experimental/util/: __init__.py
edgeimpulse/impulse/: __init__.py
edgeimpulse/impulse/_functions/: build.py
edgeimpulse/methods/: deploy.py  profile.py
edgeimpulse/model/: __init__.py  input_type.py  model_info.py  output_type.py
edgeimpulse/model/_functions/: deploy.py  profile.py
edgeimpulse/tuner/: __init__.py
edgeimpulse/tuner/_functions/: tuner.py
sphinx/: banner.html  conf.py  index.rst
sphinx/source/: edgeimpulse.model.output_type.rst
tests/: test_data_download.py  test_data_upload.py  test_datasets.py  test_deploy.py  test_impulse.py  test_model_info.py  test_profile.py  test_tuner.py  test_upload_files.py  test_upload_numpy.py  test_upload_pandas.py  test_util.py  test_websocket_logging.py  time_data_upload.py  util.py
tests/sample_data/: air_quality_no2_long.csv  bad.01.csv  good.01.csv  good.02.txt  metadata.csv  moonwalk.01.avi  wave.01.cbor  wave.01.json
tests/sample_data/coffee/: info.labels
tests/sample_data/coffee/testing/: coffeemachine_multilabel_1.json.4g9rutf2.ingestion-dd78489dc-xccft.json  coffeemachine_multilabel_3.json.4g9ruqf8.ingestion-dd78489dc-7ptm8.json  coffeemachine_multilabel_4.csv.4g9rugge.ingestion-dd78489dc-45k85.json
tests/sample_data/coffee/training/: coffeemachine_multilabel_10.json.4gfhsb5p.ingestion-bbc48f79c-4lp65.s1.json  coffeemachine_multilabel_11.json.4gfhs9ch.ingestion-bbc48f79c-8s5dg.json  (+6 more)
tests/sample_data/dataset/: README.txt  info.labels
tests/sample_data/object_detection/: bounding_boxes.labels
tests/sample_models/: accelerometer-representative.npy  fan-v3.f32.lite  fomo.96x96.i8q.lite  object-detection-yolov5.f32.lite  responding-to-your-voice-tutorial.f32.lite  saved_model-representative.npy  saved_model-representative.wrong_shape.npy
tests/sample_models/a_keras_saved_model/: keras_metadata.pb  saved_model.pb
(+10 files in other folders)
