[tool.poetry]
name = "edgeimpulse"
version = "1.0.13"
description = "Python SDK for Edge Impulse."
authors = ["EdgeImpulse Inc. <hello@edgeimpulse.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://edgeimpulse.com"
repository = "https://github.com/edgeimpulse/python-sdk"
documentation = "https://docs.edgeimpulse.com/docs/edge-impulse-python-sdk/overview"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
edgeimpulse-api = "1.53.13"
requests = "^2.23.0"
python-socketio = {extras = ["client"], version = "^5.8.0"}

[tool.poetry.dev-dependencies]
pandas = "^2.0.3"
numpy = "^1.22"
onnx = "^1.12"
pdoc3 = "0.10.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
indent-width = 4

[tool.ruff.lint]
select = [
    "B006",
    "A",    # flake8-builtins: prevent keywords that clobber python builtins
    "E4",   # (default) flake8: listing imports
    "E7",   # (default) flake8: multiple lines, comparisons, naming
    "E9",   # (default) flake8: Python syntax errors
    "F",    # (default) pyflakes: https://www.flake8rules.com/
    "W",    # flake8: whitespace rules
    "D",
]
ignore = []
pydocstyle.convention = "google"

[tool.black]
target-version = ["py38"]
line-length = 88
